--- a/src/Busybee/PersonBundle/Resources/views/Address/index.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Address/index.html.twig
@@ -6,26 +6,24 @@
 
 {% form_theme form "BusybeeFormBundle:Template:bootstrap.html.twig" %}
 
-{% block title %}{{ parent() }}{{ 'person.address.title'|trans }}{% endblock title %}
-{% block headerTitle %}{{ 'person.address.title'|trans }}{% endblock headerTitle %}
-{% block headerLead %}{{ 'person.address.description'|trans }}{% endblock headerLead %}
-
+{% block menuContainer %}{% endblock %}
+{% block titleContainer %}{% endblock %}
 
 
 {% block contentContainer %}
-{{ form_start(form, {'action': path('address_edit', {'id': id}), 'method': 'POST'}) }}
+{{ form_start(form) }}
 	<div class="container-fluid">
-		<div class='row' id="addressMessage{{ form.vars.name }}" style="display: none;">
+		<div class="row" id="addressMessage" style="display: none;">
 		</div>
 	</div>
 	<div id="addressContent">
-		{% include 'BusybeePersonBundle:Address:edit.html.twig' with {'classSuffix': 'address1'} %}
+		{% include 'BusybeePersonBundle:Address:edit.html.twig' %}
 	</div>
 {{ form_end(form) }}
 {% endblock contentContainer %}
 
 {% block javascripts %}
 	{{ parent() }}
-	{% include 'BusybeePersonBundle:Address:script.html.twig' with {'classSuffix': 'address1'} %}
-	{% include 'BusybeePersonBundle:Locality:script.html.twig' with {'classSuffix': 'address1'} %}
+	{% include 'BusybeeHomeBundle:Scripts:fadeAlert.js.twig' %}
+	{% include 'BusybeePersonBundle:Address:script.html.twig' %}
 {% endblock javascripts %}
