--- a/src/Busybee/HomeBundle/Resources/views/Scripts/monitorForm.js.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Scripts/monitorForm.js.twig
@@ -7,4 +7,7 @@
         var id = $(this).val();
         window.open(path.replace('__id__', id),'_self');
     });
+    $("button[type='reset']").click(function(e) {
+        $(".formChanged").prop("disabled", false);
+    })
 </script>
