--- a/src/Busybee/PersonBundle/Resources/views/Address/edit.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Address/edit.html.twig
@@ -4,15 +4,26 @@
 
 {% form_theme form "BusybeeFormBundle:Template:bootstrap.html.twig" %}
 
-{% include 'BusybeeHomeBundle:Default:flash.html.twig' with {'flashClass': 'fadeAlert', 'transDomain': 'BusybeePersonBundle'} %}
 <div class="panel panel-primary busybee-panel">
 	<div class="panel-heading">
-		<h3 class="panel-title">{{ 'address.title'|trans}}</h3>
+		<h3 class="panel-title">{{ 'address.title'|trans}}
+            {% if form.vars.value.canDelete() and id != 'Add' %}
+				<button type="button" title="{{ 'address.action.delete'|trans }}" onclick="window.open('{{ path('address_delete', {'id': id}) }}','_self')" class="btn btn-danger halflings halflings-erase" style="float: right"></button>
+            {% endif %}
+			<button type="reset" title="{{ 'address.action.reset'|trans }}" style="float: right;" class="btn btn-info halflings-refresh halflings"></button>
+			<button type="button" title="{{ 'address.action.add'|trans }}" onclick="window.open('{{ path('address_manage', {'id': 'Add'}) }}','_self')" style="float: right;" class="formChanged btn btn-primary halflings-plus-sign halflings"></button>
+			<button type="button" title="{{ 'address.action.close'|trans }}" onclick="window.close()" style="float: right;" class="formChanged btn btn-warning halflings-folder-close halflings"></button>
+			<button type="submit" title="{{ 'address.action.save'|trans }}" style="float: right;" class="btn btn-success halflings-save halflings"></button>
+
+		</h3>
 	</div>
 	<div class="panel-body">
 		<div class="container-fluid">
 			<div class='row'>
-				<div class='col-sm-6 well'>
+				<div class="col-sm-6 alert alert-success">
+                    {{ form_row(form.addressList) }}
+				</div>
+				<div class='col-sm-6 well' style="display:none">
 					<div class='form-group text-right'>
 						{{ form_widget(form.save) }}
 						{{ form_widget(form.close) }}
@@ -37,7 +48,7 @@
 					{{ form_row(form.streetNumber) }}
 				</div>
 				<div class='col-sm-6 well'>
-					{{ form_row(form.streetName) }}
+                    {{ form_row(form.streetName) }}
 				</div>
 			</div>
 			<div class='row'>
@@ -47,11 +58,12 @@
 					</div>
 				</div>
 				<div class='col-sm-6 well'>
+					{{ form_row(form.locality, {'value': form.locality.vars.data}) }}
 					<span>
 						<button title="{{ 'locality.refresh'|trans }}" id="refreshAddressLocality" type="button" class="btn btn-info halflings halflings-refresh" style="float: right; " ></button>
 						<button title="{{ 'locality.add'|trans }}" id="addAddressLocality" type="button" class="btn btn-primary halflings halflings-plus-sign" style="float: right; " ></button>
-						{{ form_row(form.locality, {'value': form.locality.vars.data}) }}
-					</span>
+					</span><br/>
+                    {% include 'BusybeeHomeBundle:Default:flash.html.twig' with {'flashClass': 'fadeAlert', 'transDomain': 'BusybeePersonBundle'} %}
 				</div>
 			</div>
 		</div>
