--- a/src/Busybee/PersonBundle/Resources/views/Locality/edit.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Locality/edit.html.twig
@@ -3,25 +3,34 @@
 {% trans_default_domain "BusybeePersonBundle" %}
 
 {% form_theme form "BusybeeFormBundle:Template:bootstrap.html.twig" %}
-{% include 'BusybeeHomeBundle:Default:flash.html.twig' with {'flashClass': 'fadeAlert', 'transDomain': 'BusybeePersonBundle'} %}
 	<div class="panel panel-info busybee-panel">
 		<div class="panel-heading">
-			<h3 class="panel-title">{{ 'locality.title'|trans}}</h3>
+			<h3 class="panel-title">{{ 'locality.title'|trans}}
+                {% if form.vars.value.canDelete() and id != 'Add' %}
+					<button type="button" title="{{ 'locality.action.delete'|trans }}" onclick="window.open('{{ path('locality_delete', {'id': id}) }}','_self')" class="btn btn-danger halflings halflings-erase" style="float: right"></button>
+                {% endif %}
+				<button type="reset" title="{{ 'locality.action.reset'|trans }}" style="float: right;" class="btn btn-info halflings-refresh halflings"></button>
+				<button type="button" title="{{ 'locality.action.close'|trans }}" onclick="window.close()" style="float: right;" class="formChanged btn btn-warning halflings-folder-close halflings"></button>
+				<button type="submit" title="{{ 'locality.action.save'|trans }}" style="float: right;" class="btn btn-success halflings-save halflings"></button>
+			</h3>
 		</div>
 		<div class="panel-body">
 			<div class='row'>
-				<div class='col-sm-6 well'>
-					{{ form_row(form.localityList, {'value': form.vars.value.id|trim }) }}
+				<div class="col-sm-6">
+                    {% include 'BusybeeHomeBundle:Default:flash.html.twig' with {'flashClass': 'fadeAlert', 'transDomain': 'BusybeePersonBundle'} %}
 				</div>
-				<div class='col-sm-6 well'>
+				<div class="col-sm-6 well" style="display: none">
 					<div class='form-widget text-right'>
                         {{ form_widget(form.save) }}
                         {{ form_widget(form.reset) }}
                         {{ form_widget(form.close) }}
-						{% if form.vars.value.canDelete() and id != 'Add' %}
-							<button type="button" onclick="window.open('{{ path('locality_delete', {'id': id}) }}','_self')" class="btn btn-danger glyphicons glyphicons-delete">{{ 'form.delete'|trans({}, 'BusybeeHomeBundle') }}</button>
-						{% endif %}
+                        {% if form.vars.value.canDelete() and id != 'Add' %}
+							<button type="button" onclick="window.open('{{ path('locality_delete', {'id': id}) }}','_self')" class="btn btn-danger glyphicons glyphicons-erase">{{ 'form.delete'|trans({}, 'BusybeeHomeBundle') }}</button>
+                        {% endif %}
 					</div>
+				</div>
+				<div class='col-sm-6 alert alert-success'>
+					{{ form_row(form.localityList, {'value': form.vars.value.id|trim }) }}
 				</div>
 			</div>
 			<div class='row'>
