Person Re-write

--- a/src/Busybee/PersonBundle/Resources/views/Person/contact.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/contact.html.twig
@@ -65,7 +65,19 @@
 					</div>
 					<div class="row">
 						<div class="col-sm-12 well">
-							{{ form_row(form.website) }}
+                            {{ form_row(form.website) }}
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-12 well">
+                            {{ form_row(form.address1) }}
+                            {{ form_row(form.address1_list) }}
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-12 well">
+                            {{ form_row(form.address2) }}
+                            {{ form_row(form.address2_list) }}
 						</div>
 					</div>
 				</div>
