--- a/src/Busybee/PersonBundle/Resources/views/Person/edit.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/edit.html.twig
@@ -12,9 +12,9 @@
 {% endblock stylesheets %}
 
 
-{% block title %}{{ parent() }}{% if id == 'Add' %}{{ 'person.people.title'|trans }}{% else %}{{ 'person.staff.edit.title'|trans }}{% endif %}{% endblock title %}
-{% block headerTitle %}{% if id == 'Add' %}{{ 'person.people.title'|trans }}{% else %}{{ 'person.staff.edit.title'|trans }}{% endif %}{% endblock headerTitle %}
-{% block headerLead %}{% if id == 'Add' %}{{ 'person.people.description'|trans }}{% else %}{{ 'person.staff.edit.description'|trans }}{% endif %}{% endblock headerLead %}
+{% block title %}{{ parent() }}{% if id == 'Add' %}{{ 'person.people.title'|trans }}{% else %}{{ 'person.people.title'|trans }}{% endif %}{% endblock title %}
+{% block headerTitle %}{% if id == 'Add' %}{{ 'person.people.title'|trans }}{% else %}{{ 'person.people.title'|trans }}{% endif %}{% endblock headerTitle %}
+{% block headerLead %}{% if id == 'Add' %}{{ 'person.people.description'|trans }}{% else %}{{ 'person.people.description'|trans }}{% endif %}{% endblock headerLead %}
 
 {% set tabs = get_parameter('person') %}
 
@@ -45,16 +45,6 @@
 			</div>
 			{% set active = '' %}
 		{% endfor %}
-	</div>
-</div>
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-sm-12 well">
-			<div class="form-group text-right" style="margin-bottom: 5px">
-				{{ form_widget(form.save) }}
-				{{ form_widget(form.cancel) }}
-			</div>
-		</div>
 	</div>
 </div>
 {{ form_end(form) }}
